force-app/main/default/objects/Youth_in_Program_Report__c/Youth_in_Program_Report__c.object-meta.xml
<CustomObject>
    <label>Youth in Program Report</label>
    <nameField>
        <displayFormat>Y-{0000}</displayFormat>
        <label>Youth in Program Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Youth in Program Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>