force-app/main/default/objects/Youth_in_Program_Report__c/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <label>Active Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive - Did Not Complete Program</fullName>
            </value>
            <value>
                <fullName>Inactive - Successfully Completed Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>