force-app/main/default/objects/Youth_in_Program_Report__c/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <formula>Contact__r.Birth_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Year</label>
    <type>Text</type>
</CustomField>