force-app/main/default/objects/Youth_in_Program_Report__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Youth in Program Reports</relationshipLabel>
    <relationshipName>Youth_in_Program_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>