force-app/main/default/objects/Youth_in_Program_Report__c/fields/Exited_Date__c.field-meta.xml
<CustomField>
    <fullName>Exited_Date__c</fullName>
    <label>Exited Date</label>
    <type>Date</type>
</CustomField>