force-app/main/default/objects/Youth_in_Program_Report__c/fields/Exited_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Exited_Reason_Details__c</fullName>
    <label>Exited Reason Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>