force-app/main/default/objects/Youth_in_Program_Report__c/fields/FirstPic_National_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>FirstPic_National_Org_Code__c</fullName>
    <formula
  >IF(Program_Report__r.FirstPic_National_Org_Code__c != null, Program_Report__r.FirstPic_National_Org_Code__c, Grant__r.FirstPic_National_Org_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstPic National Org Code</label>
    <type>Text</type>
</CustomField>