force-app/main/default/objects/Youth_in_Program_Report__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant</label>
    <referenceTo>Grant__c</referenceTo>
    <relationshipLabel>Youth in Program Reports</relationshipLabel>
    <relationshipName>Youth_in_Program_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>