force-app/main/default/objects/Youth_in_Program_Report__c/fields/Grant_Id__c.field-meta.xml
<CustomField>
    <fullName>Grant_Id__c</fullName>
    <formula
  >IF(OR(ISBLANK(Program_Report__c), ISNULL(Program_Report__c)), Grant__c, Program_Report__r.Grant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Id</label>
    <type>Text</type>
</CustomField>