force-app/main/default/objects/Youth_in_Program_Report__c/fields/Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Name__c</fullName>
    <formula
  >IF(OR(ISBLANK(Program_Report__c), ISNULL(Program_Report__c)), Grant__r.Name, Program_Report__r.Grant__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Name</label>
    <type>Text</type>
</CustomField>