force-app/main/default/objects/Youth_in_Program_Report__c/fields/Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Status__c</fullName>
    <formula>TEXT(Grant__r.Grant_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Status</label>
    <type>Text</type>
</CustomField>