force-app/main/default/objects/Youth_in_Program_Report__c/fields/Grant_Year__c.field-meta.xml
<CustomField>
    <fullName>Grant_Year__c</fullName>
    <formula>IF(TEXT(Program_Report__r.Grant_Year__c) != null,
TEXT(Program_Report__r.Grant_Year__c), 
IF(Grant__r.Year__c != null, Grant__r.Year__c, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Year</label>
    <type>Text</type>
</CustomField>