force-app/main/default/objects/Youth_in_Program_Report__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <formula
  >IF(OR(ISBLANK(Program_Report__c), ISNULL(Program_Report__c)), Grant__r.Account__r.Name, Program_Report__r.Org_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Name</label>
    <type>Text</type>
</CustomField>