force-app/main/default/objects/Youth_in_Program_Report__c/fields/PA_Challenge_Status__c.field-meta.xml
<CustomField>
    <fullName>PA_Challenge_Status__c</fullName>
    <label>PA Challenge Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>