force-app/main/default/objects/Youth_in_Program_Report__c/fields/Post_Test__c.field-meta.xml
<CustomField>
    <fullName>Post_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post-Test</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Youth in Program Reports (Post-Test)</relationshipLabel>
    <relationshipName>Youth_in_Program_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>