force-app/main/default/objects/Youth_in_Program_Report__c/fields/Post_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Post_Test_Status__c</fullName>
    <formula>TEXT(Post_Test__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post-Test Status</label>
    <type>Text</type>
</CustomField>