force-app/main/default/objects/Youth_in_Program_Report__c/fields/Pre_Post_Tests_Score_Difference__c.field-meta.xml
<CustomField>
    <fullName>Pre_Post_Tests_Score_Difference__c</fullName>
    <formula
  >IF(AND(Pre_Test_Status__c = &apos;Complete&apos;, Post_Test_Status__c = &apos;Complete&apos;), Post_Test_Score__c - Pre_Test_Score__c, null)</formula>
    <label>Pre &amp; Post Tests Score Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>