force-app/main/default/objects/Youth_in_Program_Report__c/fields/Pre_Test__c.field-meta.xml
<CustomField>
    <fullName>Pre_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Test</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Youth in Program Reports</relationshipLabel>
    <relationshipName>Youth_in_Program_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>