force-app/main/default/objects/Youth_in_Program_Report__c/fields/Pre_Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Pre_Test_Score__c</fullName>
    <formula>Pre_Test__r.Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Test Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>