force-app/main/default/objects/Youth_in_Program_Report__c/fields/Pre_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Test_Status__c</fullName>
    <formula>TEXT(Pre_Test__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Test Status</label>
    <type>Text</type>
</CustomField>