force-app/main/default/objects/Youth_in_Program_Report__c/fields/Program_Report__c.field-meta.xml
<CustomField>
    <fullName>Program_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Report</label>
    <referenceTo>Program_Report__c</referenceTo>
    <relationshipLabel>Youth</relationshipLabel>
    <relationshipName>Youth_in_Program_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>