force-app/main/default/objects/Youth_in_Program_Report__c/fields/Program_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Report_Name__c</fullName>
    <formula>Program_Report__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Report Name</label>
    <type>Text</type>
</CustomField>