force-app/main/default/objects/Youth_in_Program_Report__c/fields/Report_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Report_Date_Range__c</fullName>
    <formula
  >TEXT(MONTH(Program_Report__r.Start_Date__c))+&quot;/&quot; +TEXT(DAY(Program_Report__r.Start_Date__c))+&quot;/&quot; +TEXT(YEAR(Program_Report__r.Start_Date__c))
+ &apos; - &apos; + 
TEXT(MONTH(Program_Report__r.End_Date__c))+&quot;/&quot; +TEXT(DAY(Program_Report__r.End_Date__c))+&quot;/&quot; 
+TEXT(YEAR(Program_Report__r.End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Date Range</label>
    <type>Text</type>
</CustomField>