force-app/main/default/objects/Youth_in_Program_Report__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <formula>Program_Report__r.Site_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Id</label>
    <type>Text</type>
</CustomField>