force-app/main/default/objects/Youth_in_Program_Report__c/fields/Youth_Id__c.field-meta.xml
<CustomField>
    <fullName>Youth_Id__c</fullName>
    <formula>Contact__r.Youth_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Youth Id</label>
    <type>Text</type>
</CustomField>