force-app/main/default/objects/Youth_in_Program_Report__c/recordTypes/Youth_in_Program_Report.recordType-meta.xml
<RecordType>
    <fullName>Youth_in_Program_Report</fullName>
    <active>true</active>
    <label>Youth in Program Report</label>
</RecordType>