force-app/main/default/objects/Youth_in_Program_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Grant_Name__c</columns>
    <columns>Grant_Year__c</columns>
    <columns>Program_Report__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>