force-app/main/default/objects/Youth_in_Program_Report__c/recordTypes/Youth_in_Grant_Report.listView-meta.xml
<ListView>
    <fullName>Youth_in_Grant_Report</fullName>
    <columns>NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>Grant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Youth_in_Program_Report__c.Youth_in_Grant_Report</value>
    </filters>
    <label>Youth in Grant Report</label>
</ListView>